FZ12-Rev.1 Исправить метод getAll() так, чтобы он в цикле не отправлял запросы к БД. Исправить имена переменных, некоторые методы валидации поставить первыми.